--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io/challenges/four-card-feature-section-weK1eFYK" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Moridzu</a>.
+      Coded by <a href="https://github.com/rizard1" target="_blank">Moridzu</a>.
     </p>
   </footer>
 
